--- a/package.json
+++ b/package.json
@@ -11,23 +11,44 @@
   },
   "dependencies": {
     "@mlc-ai/web-llm": "^0.2.79",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tiptap/extension-blockquote": "^3.0.7",
+    "@tiptap/extension-code-block-lowlight": "^3.0.7",
+    "@tiptap/extension-emoji": "^3.0.7",
+    "@tiptap/extension-highlight": "^3.0.7",
+    "@tiptap/extension-text-align": "^3.0.7",
+    "@tiptap/extension-typography": "^3.0.7",
+    "@tiptap/extension-youtube": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
+    "axios": "^1.11.0",
+    "bad-words": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
-    "framer-motion": "^12.23.9",
+    "embla-carousel-react": "^8.6.0",
+    "filipino-badwords-list": "^1.1.2",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
+    "postprocessing": "^6.37.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.61.1",
     "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.7.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "tailwindcss-rfs": "^5.0.0"
+    "tailwindcss-rfs": "^5.0.0",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -40,6 +61,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "sass-embedded": "^1.89.2",
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
