build: install sonner and dexie.json
implement sonner for toast notifications

--- a/package.json
+++ b/package.json
@@ -33,18 +33,22 @@
     "bad-words": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
     "filipino-badwords-list": "^1.1.2",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
+    "next-themes": "^0.4.6",
     "postprocessing": "^6.37.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-rfs": "^5.0.0",
