--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@mlc-ai/web-llm": "^0.2.79",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -39,24 +42,30 @@
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
     "filipino-badwords-list": "^1.1.2",
+    "framer-motion": "^12.23.12",
+    "lenis": "^1.3.8",
+    "lovefield": "^2.1.12",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "postprocessing": "^6.37.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "qss": "^3.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.61.1",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "tailwindcss-rfs": "^5.0.0",
     "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/lovefield": "^2.1.7",
+    "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
