--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.61.1",
     "react-intersection-observer": "^9.16.0",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.7.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
