--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/culori": "^4.0.0",
     "@types/lovefield": "^2.1.7",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
