--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
+    "nprogress": "^0.2.0",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.6",
     "qss": "^3.0.0",
