chore: attempt to add analytics tracking

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,19 @@ REcAPTCHA_SECRET_KEY=
 
 
 VITE_DATA_SOURCE_URL=
+
+# Google Analytics 4 Measurement ID (format: G-XXXXXXXXX)
+VITE_GA_ID=G-XXXXXXXXX
+
+# Optional ipinfo token (note: client-side tokens are exposed publicly)
+VITE_IPINFO_TOKEN=your_ipinfo_token_here
+
+# Optional vendor script URL (e.g. Leadfeeder snippet)
+VITE_VENDOR_SCRIPT_URL=https://example.leadfeeder.com/snippet.js
+
+# Enable fingerprinting via FingerprintJS (true/false)
+VITE_ENABLE_FINGERPRINT=true
+
+# Send an anonymized identify event to GA (true/false)
+VITE_SEND_IDENTIFY_TO_GA=false
+VITE_SEND_IDENTIFY_TO_GA=false
