--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cloudpdf/viewer": "^1.0.5",
+    "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@mlc-ai/web-llm": "^0.2.79",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -67,6 +68,7 @@
     "qss": "^3.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.61.1",
     "react-intersection-observer": "^9.16.0",
     "react-rnd": "^10.5.2",
