--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,7 @@ VITE_APP_API_URL=localhost
 
 VITE_PORTFOLIO_API_BASE=http://localhost:port
 
-REcAPTCHA_SITE_KEY=
-REcAPTCHA_SECRET_KEY=
+VITE_RECAPTCHA_SITE_KEY=
 
 
 VITE_DATA_SOURCE_URL=
@@ -23,4 +22,6 @@ VITE_ENABLE_FINGERPRINT=true
 
 # Send an anonymized identify event to GA (true/false)
 VITE_SEND_IDENTIFY_TO_GA=false
-VITE_SEND_IDENTIFY_TO_GA=false
+
+VITE_DISCORD_PROXY_URL=
+VITE_DISCORD_PROXY_KEY=
