--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -22,6 +22,9 @@ jobs:
             - name: Install Vercel CLI
               run: npm install --global vercel
 
+            - name: Pull Vercel Project Settings
+              run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
             - name: Pull Vercel Environment Information
               run: vercel env pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
