--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -11,6 +11,7 @@ on:
 
 jobs:
     Deploy-Preview:
+        if: ${{ !contains(github.event.head_commit.message, '[skip preview]') }}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout code
