chore: add contact QR code generation and display [skip preview]
- add Contact QR on contact page

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+contact_qr.svg
 
 # Editor directories and files
 .vscode/*
@@ -22,6 +23,24 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Python virtual envs and build artefacts
+.venv/
+venv/
+env/
+ENV/
+venv-*/
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+pip-log.txt
+pip-delete-this-directory.txt
+build/
+dist/
+eggs/
+*.egg-info/
 
 # Environment files
 .env
